--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.76.1",
+    "d3-geo": "^3.1.1",
     "next": "15.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-simple-maps": "^3.0.0",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -27,5 +30,9 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.15",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-simple-maps/react": "$react",
+    "react-simple-maps/react-dom": "$react-dom"
   }
 }
