refactor: ajustar tipos e melhorar a tipagem no MapaBrasil, corrigir redirecionamento no logout e adicionar configuração .npmrc

--- a/package.json
+++ b/package.json
@@ -31,8 +31,5 @@
     "tailwindcss": "^4.1.15",
     "typescript": "^5"
   },
-  "overrides": {
-    "react-simple-maps/react": "$react",
-    "react-simple-maps/react-dom": "$react-dom"
-  }
+  "overrides": {}
 }
