--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.30.0",
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
