--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/localizations": "^3.35.3",
+    "@clerk/nextjs": "^6.37.0",
+    "@clerk/themes": "^2.4.51",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.76.1",
     "d3-geo": "^3.1.1",
